[package]
name = "bukzor_learn_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libbukzor_learn_wasm"  # avoid name collision

[dependencies]
anyhow = "1.0.86"
cfg-if = "1.0.0"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
owning_ref = "0.4.1"
self_cell = "1.0.4"
wgpu = "22.0"
winit = "0.30.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[profile.release]
lto = true
opt-level = 'z'
